--- a/index.html
+++ b/index.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2 anos!</title>
-    <link rel="stylesheet" href="firstpage.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Spicy+Rice&display=swap" rel="stylesheet">
+    <title>Formulário de Login</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-    <section>
-        <p>Olá Maria Júlia, seja bem vinda a nossa comemoração de 2 anos!</p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>    
-        <a href="fisrt.html">Clique aqui para começar</a>
-    </section>
-</div>
+    <div class="login-container">
+        <form id="loginForm">
+            <h2>Login</h2>
+            <label for="name">Nome:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="password">Senha:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Entrar</button>
+            <p id="errorMessage"></p>
+        </form>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
